fix : 이미지 업로드 및 조회 변경